--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
   <head>
     <meta charset="utf-8">
     <title>Introduction to CSS Lab</title>
-    <!-- Your code here! -->
+    <link rel="stylesheet" href="./style.css" />
   </head>
 
-  <body>
+  <body style bgcolor= "#00b3e6">
 
     <div>
-      <h1 id='main-header'>How Does Writing CSS Differ From Writing HTML?</h1>
+      <h1 id='main-header' style="font-size: 22px;">How Does Writing CSS Differ From Writing HTML?</h1>
       <p>As we write CSS these are the type of questions we might ask ourselves:</p>
 
       <ul>
